@@ -283,7 +283,7 @@ class DistUpgradeView(object):
           return False
         # set the message
         self.confirmChangesMessage = msg
-
+        return True
 
     def askYesNoQuestion(self, summary, msg, default='No'):
         " ask a Yes/No question and return True on 'Yes' "
