@@ -3,6 +3,8 @@ update-manager (1:0.93.22) intrepid; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py:
     - add rule to force kdelibs5-dev upgrade (LP: #279621),
       thanks to ScottK
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - do not hang if a script fails to run (LP: #280236)
 
  --
 
